【修改】金流參數
